Fixed-Column-Spacing
Approved by gaby

--- a/src/components/FeatureViews/Accounts/TabComponents/TabComponents.scss
+++ b/src/components/FeatureViews/Accounts/TabComponents/TabComponents.scss
@@ -222,8 +222,7 @@
   height: 30px;
   padding: 5px;
   top: 23%;
-  right: 6%;
-
+  margin-left: 7px;
   color: $secondaryLightFontColor;
 
   &.good,
@@ -263,11 +262,13 @@
     width: 150px;
     top: 23%;
     right: 8%;
+    
   }
 
   .accounts-table-heading,
   .accounts-table-row>* {
     cursor: default;
+    
   }
 }
 
@@ -293,3 +294,17 @@
   }
 }
 
+.accounts-table-row{
+  .course-icon{
+    @include respond-to(medium-screens){
+      margin-right: -5px;
+    }
+    @include respond-to(handhelds){
+      margin-right: -5px;
+    }
+    @include respond-to(ipad-landscape){
+      margin-right: 0
+    }
+    margin-right: 1.5em
+  }
+}
